#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-03-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999902 released.

        * Added conditional to avoid connection closed message
          when such a condition occurs during cleanup.


2012-03-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999901 released.

        * Added fix to remove new line from $stderr variable
          during compilation phase.

        * Added Domain logic to Makefile.PL.


2012-03-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999 released.

        * Changed the C code for parameters in fullauto.c.

        * Added passwd file dup cleanup to Makefile.PL.

        * Fixed package line in Distro/fa_menu.pl.


2012-02-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9998 released.

        * Added 1/50th second sleep to test_dir.

        * Other misc bug fixes found while testing on MSWin
          2008 Server.


2012-02-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9997 released.

        * Added ending '#' in setuid_cmd so line numbers can
          be manually added via vi for debugging.


2012-02-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9996 released.

        * Added Domain User check for Makefile.PL.

        * Modified image_magick in fa_code_demo.pm in Distro.


2012-02-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9995 released.

        * Fixed Makefile.PL $main::VERSION.


2012-02-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9994 released.
